- added the entry class. this will be used to show the records to the user - added Utils and Constants classes - implemented todayHoursTextView in the first screen with the help of the Utils class

--- a/Work Tracker/res/values/strings.xml
+++ b/Work Tracker/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="normal_search_menu">Normal Search</string>
     <string name="tot_income">Total Income:</string>
     <string name="punch_out">Punch Out</string>
+    <string name="ok">Ok</string>
 
 </resources>
