-added new activity as a dialog for addPunchInButton (created only layout, without controller)

--- a/Work Tracker/res/values/strings.xml
+++ b/Work Tracker/res/values/strings.xml
@@ -47,5 +47,7 @@
 		<item>This week</item>
 		<item>This month</item>
     </string-array>
+    <string name="select_date_and_time">Select Date and Time:</string>
+    <string name="cancel">Cancel</string>
 
 </resources>
